--- a/bookdown/index.Rmd
+++ b/bookdown/index.Rmd
@@ -1,5 +1,5 @@
 --- 
-title: "Análisis Técnico"
+title: "Introducción al análisis funcional y a la teoría de la medida"
 subtitle: "Ciencia de los Datos Financieros"
 author: "Synergy Vision"
 date: "`r Sys.Date()`"
@@ -16,8 +16,8 @@ monofontoptions: "Scale=0.8"
 keep_md: yes
 site: bookdown::bookdown_site
 description: ""
-url: 'http\://synergy.vision/Analisis-Tecnico/'
-github-repo: synergyvision/Analisis-Tecnico/
+url: 'http\://synergy.vision/Analisis-y-medida/'
+github-repo: synergyvision/Analisis-y-medida/
 cover-image: images/cover.png
 ---
 
