--- a/bookdown/packages.bib
+++ b/bookdown/packages.bib
@@ -10,15 +10,8 @@
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2018},
-  note = {R package version 0.6},
+  note = {R package version 0.7},
   url = {https://CRAN.R-project.org/package=bookdown},
-}
-@Manual{R-DT,
-  title = {DT: A Wrapper of the JavaScript Library 'DataTables'},
-  author = {Yihui Xie},
-  year = {2016},
-  note = {R package version 0.2},
-  url = {https://CRAN.R-project.org/package=DT},
 }
 @Manual{R-e1071,
   title = {e1071: Misc Functions of the Department of Statistics, Probability
@@ -27,13 +20,6 @@ Theory Group (Formerly: E1071), TU Wien},
   year = {2017},
   note = {R package version 1.6-8},
   url = {https://CRAN.R-project.org/package=e1071},
-}
-@Manual{R-fPortfolio,
-  title = {fPortfolio: Rmetrics - Portfolio Selection and Optimization},
-  author = {Rmetrics Core Team and Diethelm Wuertz and Tobias Setz and Yohan Chalabi},
-  year = {2014},
-  note = {R package version 3011.81},
-  url = {https://CRAN.R-project.org/package=fPortfolio},
 }
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
@@ -49,18 +35,11 @@ Theory Group (Formerly: E1071), TU Wien},
   note = {R package version 2.3},
   url = {https://CRAN.R-project.org/package=gridExtra},
 }
-@Manual{R-htmlwidgets,
-  title = {htmlwidgets: HTML Widgets for R},
-  author = {Ramnath Vaidyanathan and Yihui Xie and JJ Allaire and Joe Cheng and Kenton Russell},
-  year = {2017},
-  note = {R package version 0.9},
-  url = {https://CRAN.R-project.org/package=htmlwidgets},
-}
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2017},
-  note = {R package version 1.17},
+  year = {2018},
+  note = {R package version 1.20},
   url = {https://CRAN.R-project.org/package=knitr},
 }
 @Manual{R-latex2exp,
@@ -69,13 +48,6 @@ Theory Group (Formerly: E1071), TU Wien},
   year = {2015},
   note = {R package version 0.4.0},
   url = {https://CRAN.R-project.org/package=latex2exp},
-}
-@Manual{R-miniUI,
-  title = {miniUI: Shiny UI Widgets for Small Screens},
-  author = {Joe Cheng},
-  year = {2016},
-  note = {R package version 0.1.1},
-  url = {https://CRAN.R-project.org/package=miniUI},
 }
 @Manual{R-modeest,
   title = {modeest: Mode Estimation},
@@ -93,15 +65,8 @@ Theory Group (Formerly: E1071), TU Wien},
 }
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
-  author = {JJ Allaire and Joe Cheng and Yihui Xie and Jonathan McPherson and Winston Chang and Jeff Allen and Hadley Wickham and Aron Atkins and Rob Hyndman and Ruben Arslan},
-  year = {2017},
-  note = {R package version 1.6},
+  author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang},
+  year = {2018},
+  note = {R package version 1.9},
   url = {https://CRAN.R-project.org/package=rmarkdown},
-}
-@Manual{R-webshot,
-  title = {webshot: Take Screenshots of Web Pages},
-  author = {Winston Chang},
-  year = {2017},
-  note = {R package version 0.4.2},
-  url = {https://CRAN.R-project.org/package=webshot},
 }
