--- a/bookdown/packages.bib
+++ b/bookdown/packages.bib
@@ -13,6 +13,13 @@
   note = {R package version 0.7},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
+@Manual{R-DT,
+  title = {DT: A Wrapper of the JavaScript Library 'DataTables'},
+  author = {Yihui Xie},
+  year = {2016},
+  note = {R package version 0.2},
+  url = {https://CRAN.R-project.org/package=DT},
+}
 @Manual{R-e1071,
   title = {e1071: Misc Functions of the Department of Statistics, Probability
 Theory Group (Formerly: E1071), TU Wien},
@@ -35,11 +42,18 @@ Theory Group (Formerly: E1071), TU Wien},
   note = {R package version 2.3},
   url = {https://CRAN.R-project.org/package=gridExtra},
 }
+@Manual{R-htmlwidgets,
+  title = {htmlwidgets: HTML Widgets for R},
+  author = {Ramnath Vaidyanathan and Yihui Xie and JJ Allaire and Joe Cheng and Kenton Russell},
+  year = {2017},
+  note = {R package version 0.9},
+  url = {https://CRAN.R-project.org/package=htmlwidgets},
+}
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2018},
-  note = {R package version 1.20},
+  year = {2017},
+  note = {R package version 1.17},
   url = {https://CRAN.R-project.org/package=knitr},
 }
 @Manual{R-latex2exp,
@@ -66,7 +80,14 @@ Theory Group (Formerly: E1071), TU Wien},
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang},
-  year = {2018},
-  note = {R package version 1.9},
+  year = {2017},
+  note = {R package version 1.7},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+@Manual{R-webshot,
+  title = {webshot: Take Screenshots of Web Pages},
+  author = {Winston Chang},
+  year = {2017},
+  note = {R package version 0.5.0},
+  url = {https://CRAN.R-project.org/package=webshot},
 }
