--- a/bookdown/latex/preamble.tex
+++ b/bookdown/latex/preamble.tex
@@ -1,5 +1,6 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc} % recommended encoding
+\usepackage[usenames,dvipsnames]{xcolor}
 \usepackage[spanish]{babel}
 \usepackage{booktabs}
 \usepackage{longtable}
