--- a/bookdown/latex/preamble.tex
+++ b/bookdown/latex/preamble.tex
@@ -8,8 +8,15 @@
 
 %\setmainfont[UprightFeatures={SmallCapsFont=AlegreyaSC-Regular}]{Alegreya}
 
-\usepackage{framed,color}
+\usepackage{framed,xcolor}
 \definecolor{shadecolor}{RGB}{248,248,248}
+
+\newcommand{\bc}[1]{\textcolor{blue}{\text{(#1)}}}
+\newcommand{\bl}{\color{blue}}
+\newcommand{\red}{\color{red}}
+\newcommand{\gr}{\color{ForestGreen}}
+\newcommand{\black}{\color{black}}
+\newcommand{\gol}{\color{DarkOrchid}}
 
 \renewcommand{\textfraction}{0.05}
 \renewcommand{\topfraction}{0.8}
