--- a/bookdown/packages.bib
+++ b/bookdown/packages.bib
@@ -13,12 +13,55 @@
   note = {R package version 0.7},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
+@Manual{R-e1071,
+  title = {e1071: Misc Functions of the Department of Statistics, Probability
+Theory Group (Formerly: E1071), TU Wien},
+  author = {David Meyer and Evgenia Dimitriadou and Kurt Hornik and Andreas Weingessel and Friedrich Leisch},
+  year = {2017},
+  note = {R package version 1.6-8},
+  url = {https://CRAN.R-project.org/package=e1071},
+}
+@Manual{R-ggplot2,
+  title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
+  author = {Hadley Wickham and Winston Chang},
+  year = {2016},
+  note = {R package version 2.2.1},
+  url = {https://CRAN.R-project.org/package=ggplot2},
+}
+@Manual{R-gridExtra,
+  title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
+  author = {Baptiste Auguie},
+  year = {2017},
+  note = {R package version 2.3},
+  url = {https://CRAN.R-project.org/package=gridExtra},
+}
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2018},
   note = {R package version 1.20},
   url = {https://CRAN.R-project.org/package=knitr},
+}
+@Manual{R-latex2exp,
+  title = {latex2exp: Use LaTeX Expressions in Plots},
+  author = {Stefano Meschiari},
+  year = {2015},
+  note = {R package version 0.4.0},
+  url = {https://CRAN.R-project.org/package=latex2exp},
+}
+@Manual{R-modeest,
+  title = {modeest: Mode Estimation},
+  author = {P. PONCET},
+  year = {2012},
+  note = {R package version 2.1},
+  url = {https://CRAN.R-project.org/package=modeest},
+}
+@Manual{R-moments,
+  title = {moments: Moments, cumulants, skewness, kurtosis and related tests},
+  author = {Lukasz Komsta and Frederick Novomestky},
+  year = {2015},
+  note = {R package version 0.14},
+  url = {https://CRAN.R-project.org/package=moments},
 }
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
