--- a/bookdown/packages.bib
+++ b/bookdown/packages.bib
@@ -3,7 +3,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2017},
+  year = {2018},
   url = {https://www.R-project.org/},
 }
 @Manual{R-bookdown,
@@ -13,19 +13,26 @@
   note = {R package version 0.7},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
+@Manual{R-DT,
+  title = {DT: A Wrapper of the JavaScript Library 'DataTables'},
+  author = {Yihui Xie},
+  year = {2018},
+  note = {R package version 0.4},
+  url = {https://CRAN.R-project.org/package=DT},
+}
 @Manual{R-e1071,
   title = {e1071: Misc Functions of the Department of Statistics, Probability
 Theory Group (Formerly: E1071), TU Wien},
   author = {David Meyer and Evgenia Dimitriadou and Kurt Hornik and Andreas Weingessel and Friedrich Leisch},
-  year = {2017},
-  note = {R package version 1.6-8},
+  year = {2018},
+  note = {R package version 1.7-0},
   url = {https://CRAN.R-project.org/package=e1071},
 }
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
-  author = {Hadley Wickham and Winston Chang},
-  year = {2016},
-  note = {R package version 2.2.1},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo},
+  year = {2018},
+  note = {R package version 3.0.0},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 @Manual{R-gridExtra,
@@ -34,6 +41,13 @@ Theory Group (Formerly: E1071), TU Wien},
   year = {2017},
   note = {R package version 2.3},
   url = {https://CRAN.R-project.org/package=gridExtra},
+}
+@Manual{R-htmlwidgets,
+  title = {htmlwidgets: HTML Widgets for R},
+  author = {Ramnath Vaidyanathan and Yihui Xie and JJ Allaire and Joe Cheng and Kenton Russell},
+  year = {2018},
+  note = {R package version 1.2},
+  url = {https://CRAN.R-project.org/package=htmlwidgets},
 }
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
@@ -67,6 +81,13 @@ Theory Group (Formerly: E1071), TU Wien},
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang},
   year = {2018},
-  note = {R package version 1.9},
+  note = {R package version 1.10},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+@Manual{R-webshot,
+  title = {webshot: Take Screenshots of Web Pages},
+  author = {Winston Chang},
+  year = {2017},
+  note = {R package version 0.5.0},
+  url = {https://CRAN.R-project.org/package=webshot},
 }
