--- a/bookdown/313-probabilidades.Rmd
+++ b/bookdown/313-probabilidades.Rmd
@@ -1047,6 +1047,178 @@ $E(XY) = E(X)E(Y)$
 \qed
 \end{proof}
 
+Se conoce como distribución inducida por la variable aleatoria $X$ a
+($\mathbb{R}$, $\mathcal{B}$, $\mathcal{P}^X$), donde la medida de
+probabilidad $\mathcal{P}^X$ se define como:
+$$ \mathcal{P}^X(B) = \mathcal{P}(X^{-1}(B)), \, \forall B \in \mathcal{B} $$
+Tenemos entonces que:
+\begin{itemize}
+\item $\mathcal{P}^X(B) \geq 0 \forall B \in \mathcal{B}$
+\item $\displaystyle \mathcal{P}^X(\sum_j B_j) =
+\mathcal{P}(X^{-1}(\sum_jB_j)) = \mathcal{P}(\sum_j X^{-1}(B_j)) =
+\sum_j \mathcal{P}(X^{-1}(B_j)) = \sum_j \mathcal{P}^X(B_j)$
+\item $\displaystyle EX = \int_{\omega \in \Omega} X(\omega) d
+\mathcal{P(\omega)} = \int_{x \in \mathbb{R}} x d\mathcal{P}^X(x)$
+\end{itemize}
+\subsection{Función generatriz de momentos}
+Llamamos función generatriz de momentos de la variable aleatoria $X$ a
+la función:
+$$ M_X(t) = E(e^{tX}); \, t \in \mathbb{R} $$
+\subsection{Función característica}
+Dada una variable aleatoria $\mathbb{X}$ continua, definimos su
+función característica como:
+$$\varphi_X(t)=E(e^{itX})=\int_{-\infty}^{\infty}e^{itx}f_{X}(x)=E(cos(tX))+iE(sen(TX))$$
+\chapter{Independencia}
+\section{Concepto de independencia}
+\textbf{Definición: }Se dice que los eventos $A_t$ son independientes
+si para todo subconjunto finito $(t_i,\ldots ,t_n)$ se tiene que:
+$$P\bigcap_{k=1}^n A_{tk}=\displaystyle\prod_{k=1}^{n}P\, A_{tk}$$
+De hecho, el concepto de independencia es relativo a la familia de
+clases. Una clase de eventos se dice independiente si sus eventos son
+independientes.
+\begin{theorem}
+Se tiene que las subclases de una clase independiente son independientes.
+\end{theorem}
+\section{Suma de variables aleatorias independientes}
+\subsubsection{Teorema de Borel}
+\begin{theorem}
+Las funciones de Borel de funciones aleatorias independientes son
+independientes.
+\end{theorem}
+\subsubsection{Teorema de extensión}
+\begin{theorem}
+Las $\sigma$-algebras minimales independientes sobre clases
+independientes cerradas para la intersección finita son independientes
+\end{theorem}
+Esto tiene tres aplicaciones fundamentales:
+\begin{enumerate}
+\item Si los eventos $A_t$ son independientes, también lo son los
+$\sigma$ campos $(A_t , A_t^c , \emptyset , \Omega)$.
+\item Si la imagen inversa $\mathcal{C}_t$ de las clases de todos los
+intervalos $(-\infty, x_t)$ en los espacios de Borel $R_t$ son
+independientes, también lo son las imágenes inversas $\mathcal{B}_t$
+de los campos de Borel en $R_t$. Para todo $\mathcal{C}_t$, éste es
+cerrado para la intersección finita y $\mathcal{B}_t$ es el $\sigma$
+campo minimal sobre $\mathcal{C}_t$
+\item Sean $\mathcal{B}_t$ sigma algebras de eventos y sea $T_s$ un
+subconjunto de $T$. La $\sigma$-algebra$\mathcal{B}_T$ compuesto por
+componentes $\mathcal{B}_t$, con $t\in T_s$, es el $\sigma$ campo
+minimal sobre la clase $\mathcal{C}$ de todas las intersecciones
+finitas de eventos $A_t$ y contiene a todos sus componentes
+\end{enumerate}
+\subsubsection{Teorema de composición}
+\begin{theorem}
+Los $\sigma$ sigma algebras compuestos son independientes si y solo si sus
+$\sigma$ sub sigma algebras finitamente compuestos son independientes
+\end{theorem}
+\subsection{Familia de variables aleatorias}
+Una familia de variables aleatorias $X_{T_s}=\{ X_t \, , \, t\in T_s
+\}$ induce $\sigma$ campos $\mathcal{B}(X_{T_s})$ de eventos
+\subsubsection{Teorema de las familias}
+\begin{theorem}
+Las familias de variables aleatorias son independientes si y solo si
+sus subfamilias finitas son mutuamente independientes
+\end{theorem}
+\section{Multiplicación de variables aleatorias independientes}
+\textbf{Definición: } Las variables aleatorias $X_t\, , \, t\in T$ son
+independientes si para cada clase finita $(S_{t_1},\ldots , S_{t_n})$
+de conjuntos de Borel en R:
+$P\bigcap_{k=1}^{n}[X_{t_k}\in S{t_k}]=\displaystyle\prod_{k=1}^n
+P[X_{t_k}\in S_{t_k}]$
+\subsubsection{Lema de la multiplicación}
+\begin{lemma}
+Si $X_1, \ldots , X_n$ son variables aleatorias independientes no
+negativas, entonces
+$E\displaystyle\prod_{k=1}^{n}X_k=\displaystyle\prod_{k=1}^{n} E X_k$
+\end{lemma}
+\begin{proof}
+Basta demostrar el resultado para dos variables, dado que el resto se
+demuestra por inducción. En primer lugar, veamos que se verifica la
+condición para funciones simples.\\
+Sean $X = \sum_j x_j I_{A_j}, Y = \sum_k y_k I_{B_k}$ variables
+simples no negativas, donde $A_j = [X = x_j], B_k = [Y = y_k]$.\\
+Por ser $X,Y$ independientes, $P(A_jB_k) = P(A_j)P(B_k) \Rightarrow
+E(XY) = \sum_{k,j} P(A_jB_k) = \sum_{j,k} P(A_j)P(B_k) = E(X)E(Y)$\\
+Sean ahora $X,Y$ variables aleatorias no negativas independientes. Su
+independencia implica la de
+$$ A_{nj}=[\frac{j-1}{2^n} \leq X < \frac{j}{2^n}],
+B_{nk}=[\frac{k-1}{2^n} \leq Y < \frac{k}{2^n}]$$
+Finalmente, tendremos la independencia de las variables aleatorias simples:
+$$ X_n = \sum_{j=1}^{n2^n} \frac {j-1}{2^n}I_{A_{nj}}, Y_n =
+\sum_{k=1}^{n2^n} \frac {k-1}{2^n}I_{B_{nk}}$$
+Tenemos entonces que:
+$$ 0 \leq X_n \uparrow X, 0 \leq Y_n \uparrow Y \Rightarrow X_nY_n \uparrow XY$$
+$$ E(X_nY_n) = E(X_n)E(Y_n)$$
+De donde se deduce por el teorema de la convergencia dominada que
+$E(XY) = E(X)E(Y)$
+\qed
+\end{proof}
+\subsubsection{Teorema de la multiplicación}
+\begin{theorem}
+Sean $X_1,\ldots X_n$ variables aleatorias independientes. Si dichas
+variables aleatorias son integrables, también lo es su producto y
+además $E\displaystyle\prod_{k=1}^n X_k=\displaystyle\prod_{k=1}^n E
+X_k$
+\\\\
+Reciprocamente, si su producto es integrable y ninguna de ellas degenera
+a $0$, entonces todas ellas son integrables.
+\end{theorem}
+\begin{proof}
+La independencia de $X,Y$ nos da la independencia de $X', Y'$, donde
+$X' \in {X^+, X^-, |X|}; Y' \in {Y^+, Y^-, |Y|}$, por lo que $E(X'Y')
+= E(X')E(Y')$.\\
+Si $X,Y$ son integrables, también lo son $X',Y'$ y por la anterior
+igualdad también lo es $X'Y'$, lo cual nos da $|XY|$, y por tanto $XY$
+integrables con:
+$$ E(XY) = E[(X^+-X^-)(Y^+-Y^-)] = E(X^+)E(Y^+) - E(X^+)E(Y^-) - $$
+$$ - E(X^-)E(Y^+) + E(X^-)E(Y^-) = E(X)E(Y) $$
+\qed
+\end{proof}
+\subsubsection{Teorema de equivalencia}
+\begin{theorem}
+Para cada clase finita de conjuntos de Borel $S_t$ y de puntos $x_t,
+u_y \in \mathbb{R}$, son equivalentes las tres definiciones siguientes
+de independencia de variables aleatorias $X_t$:
+\begin{enumerate}
+\item $P\bigcap_{k=1}^n [X_{tk}\in S_{tk}]=\displaystyle\prod_{k=1}^n
+P[X_{tk}\in S_{tk}]$
+\item $F_{t_1\ldots t_n}(x_{t_1},\ldots
+,x_{t_n})=F_{t_1}(x_{t_1})\ldots F_{t_n}(x_{t_n})$
+\item $f_{t_1\ldots t_n}(u_{t_1},\ldots
+,u_{t_n})=f_{t_1}(u_{t_1})\ldots f_{t_n}(u_{t_n})$
+\end{enumerate}
+\end{theorem}
+\begin{proof}$\,$\\
+$i) \Rightarrow ii)$\\
+Tomamos $S_t = ]-\infty, x_t[$ y aplicamos la definición.\\
+$ii) \Rightarrow i)$\\
+$S_t = ]-\infty, x_t[$, $\mathcal{C}_t = {]-\infty, x_y[, t \in T}$
+son independientes. Por el teorema de extensión, los $\sigma$-campos
+minimales sobre ellos son independientes.\\
+$i) \Rightarrow iii)$\\
+Aplicación directa del teorema de la multiplicación.\\
+$iii) \Rightarrow ii)$\\
+Tenemos que $F_{t_1,...,t_n}([a_{t_1},...,a_{t_n};b_{t_1},...,b_{t_n}])
+= F_{t_1}([a_{t_1},...,a_{t_n};b_{t_1},...,b_{t_n}])$\\$F_{t_2}([a_{t_1},...,a_{t_n};b_{t_1},...,b_{t_n}])...F_{t_n}([a_{t_1},...,a_{t_n};b_{t_1},...,b_{t_n}])$.
+Haciendo $a_t \rightarrow - \infty$, $b \uparrow x_t$ tenemos $ii)$
+\end{proof}
+\subsubsection{Lema de Borel-Cantelli}
+\begin{lemma}
+Lema de Borel-Cantelli
+\\\\
+Sea $(\Omega,\mathcal{A},P) \, , \, A_n \in \mathcal{A}$. Entonces:
+\begin{itemize}
+\item $\displaystyle\sum P(A_n) < \infty \Longrightarrow
+P(\displaystyle \lim_{sup}A_n)=0$
+\item Si $ A_n$ son independientes:
+\begin{itemize}
+\item $\displaystyle\sum P(A_n) < \infty \Longrightarrow
+P(\displaystyle \lim_{sup}A_n)=0$
+\item $\displaystyle\sum P(A_n) = \infty \Longrightarrow
+P(\displaystyle \lim_{sup}A_n)=1$
+\end{itemize}
+\end{itemize}
+\end{lemma}
 
 ## Variables aleatorias
 
