--- a/bookdown/313-probabilidades.Rmd
+++ b/bookdown/313-probabilidades.Rmd
@@ -1220,6 +1220,168 @@ P(\displaystyle \lim_{sup}A_n)=1$
 \end{itemize}
 \end{lemma}
 
+
+Sean $X_1,\ldots X_n$ variables aleatorias independientes e
+idénticamente distribuidas tales que $P[X_n=1]=p$ y $P[X_n=0]=q=1-p$.
+Entonces se tiene que:
+$$\dfrac{S_n}{n}-p \stackrel{\mathcal{P}}{\longrightarrow}0$$
+El Teorema del Límite Central, que desarrollaremos más adelante, es
+una consecuencia directa del perfeccionamiento de esta ley por parte
+de Moivre y Laplace.
+\\\\
+Además enunciamos también otra ley muy parecida a esta y también muy
+importante que es la \textbf{Ley fuerte de Borel de los grandes
+números}, que constituye una versión de esta pero con la convergencia
+casi segura.
+\subsubsection{Ley fuerte de Borel de los grandes números}
+Si se tienen las hipótesis anteriores, entonces: $\dfrac{S_n}{n}-p
+\stackrel{c.s.}{\longrightarrow}0$
+\begin{theorem}
+Sea f(x) continua en $[0,1] \Rightarrow \exists {P_n(x)}$ tal que
+$\lim P_n (x) = f(x)$ uniformemente $ \forall x \in [0,1]$.
+\end{theorem}
+\begin{proof}
+\end{proof}
+\subsection{Centramiento y truncamiento}
+Diremos que centramos $X$ a $c$ si reemplazamos $X$ por $X-c$. Si $X$
+es integrable, entonces podemos centrarla a su esperanza $EX$ de forma
+que $X$ es reemplazada por $X-EX$. Es decir, diremos que una variable
+aleatoria está centrada a su media si y solo si su media existe y es
+igual a 0.
+\\\\
+Ahora vamos a introducir la varianza matemática. Sea $X$ integrable,
+llamaremos varianza de $X$ al segundo momento de $X-EX$. Dicho momento
+existe pero podría ser $\infty$ y lo denotaremos como $\sigma^2 X$.
+Por consiguiente:
+$$\sigma^2 X=E(X-EX)^2=EX^2-(EX)^2$$
+Se tiene que para todo $c$ finito:
+$$\sigma^2(X-c)=E(X-c-E(X-c))^2=E(X-EX)^2$$
+lo que quiere decir que cuando centramos una variable su varianza no cambia
+
+\\\\
+Se dice que truncamos $X$ a $c>0$ (finita) cuando reemplazamos $X$ por
+$X^c=X$ o $0$ dependiendo de si $|X|<c$ o si $|X|\geq c$ ; se dice
+entonces que $X^c$ es $X$ truncada a $c$. Lo que estamos haciendo en
+realidad es definir una variable truncada, $X^c$ como hemos visto
+anteriormente.
+\\\\
+Tenemos entonces que si $F$ es el diferencial de $X$, entonces existen
+todos los momentos de $X^c$ y son finitos; estos son:
+$$EX^c=\int_{|X|<c}x\, dF\,\,\, , \,\,\, E(X^c)^2=\int_{|X|<c}x^2\, dF
+\,\,\, , \,\,\, \ldots$$
+Siempre podremos seleccionar un $c$ suficientemente grande para hacer
+que $P[X\neq X^c]=P[|X|\geq c]$ sea arbitrariamente pequeño. Además
+nosotros también podemos seleccionar el $c_j$ suficientemente grande
+para conseguir $P\bigcup [X_j\neq X_j^{c_j}]$ arbitrariamente pequeño,
+de tal forma que, dado $\epsilon > 0$, tenemos:
+$$P\bigcup [X_j\neq X_j^{c_j}]\leq \sum P[|X_j|\geq c_j]<\frac{\epsilon}{2^j}$$
+Por consiguiente, dada una familia contable de variables aleatorias,
+podemos hacer corresponder una familia de variables aleatorias que
+difiere de la primera en un evento de probabilidad pequeña. Además, si
+estamos interesados principalmente en propiedades en el límite, no
+necesitamos probabilidades pequeñas arbitrarias.
+
+
+\textbf{Definición de convergencia equivalente: } Se dice que $X_n$ y
+$X_n^{\prime}$ son equivalentes en la convergencia si el conjunto de
+convergencia de ambos es el mismo c.s.
+\begin{lemma}
+Si las series $\sum P[X_n\neq X_n^{\prime}]$ convergen, entonces las
+sucesiones $X_n$ y $X_n^{\prime}$ son cola-equivalentes, y por tanto,
+las series $X_n$ y $X_n^{\prime}$ son equivalentes en la convergencia
+y las series $\dfrac{S_n}{b_n}$ y $\dfrac{S_n^{\prime}}{b_n}$ con
+$b\rightarrow\infty$ convergen al mismo evento y al mismo límite,
+excluyendo el evento nulo.
+\end{lemma}
+\begin{proof}
+\end{proof}
+\textbf{Corolario: } Si las series $\sum P[X_n\neq X_n^{\prime}]$
+convergen, entonces las sucesiones $X_n$ y $X_n^{\prime}$ son
+cola-equivalentes, y por tanto, las series $\sum X_n$ y $\sum
+X_n^{\prime}$ son equivalentes en cuanto a convergencia.\\
+Sean $X_1$ , $X_2$ integrables. Entonces, como el centramiento no
+modifica la varianza, podemos asumir, cuando computamos varianzas, que
+esas variables aleatorias están centradas a la media. Entonces:
+$$\sigma^2 S_n=ES_n^2=\sum_{k=1}^n
+EX_k^2+\sum_{j,k=1}EX_jX_k=\sum_{k=1}^n\sigma^2 X_k$$
+como $X_j$ y $X_k$ son independientes, tenemos que:
+$$EX_jX_k=EX_j\cdot EX_k=0$$
+Con esto en mente podemos enunciar la:
+\textbf{Desigualdad de Bienaymé: }Si las variables aleatorias
+independientes $X_n$ son independientes e integrabless, entonces:
+$$ \sigma^2 S_n=\sum_{k=1}^n \sigma^2 X_k$$
+Con la desigualdad anterior obtenemos la \textbf{desigualdad de
+Bienaymé}:
+$$\frac{\displaystyle\sum_{k=1}^n \sigma^2 X_k-\epsilon
+^2}{sup(S_n-ES_n)^2}\leq P[|S_n-ES_n|\geq \epsilon]\leq
+\frac{\sigma^2(S_n-ES_n)}{\epsilon^2} \leq
+\frac{1}{\epsilon^2}\sum_{k=1}^n\sigma^2 X_k$$
+Esta desigualdad, aplicada a $(S_{n+k}-ES_{n+k})-(S_n-ES_n)$ y
+remplazando $\epsilon$ por $b_n$ y pasando al límite se tiene el
+siguiente corolario:
+\\\\
+\textbf{Corolario: }
+\begin{itemize}
+\item Si las series $\sum\sigma^2 X_n$ convergen, entonces las series
+$\sum (X_n-EX_n)$ convergen en probabilidad.
+\item Si $\dfrac{1}{b_n^2}\displaystyle\sum_{k=1}^n \sigma^2
+X_k\rightarrow 0$, entonces $\dfrac{S_n -
+ES_n}{b_n}\stackrel{\mathcal{P}}{\rightarrow}0$\\
+\end{itemize}
+\begin{proof}
+
+La demostración pasa por notar que:
+$$P[\sum_{k}^{n+h}(X_k - EX_k)\geq\epsilon]\leq
+\dfrac{\displaystyle\sum_{k}^{n+h}\sigma^2
+X_k}{\epsilon^2}\longrightarrow 0$$
+\end{proof}
+Este último corolario es debido a Tchebichev (cuando $b_n=n$). En el
+caso de Bernouilli, donde $b_n=n$, $EX_n=p$ , $\sigma^2 X_n=pq$ se
+reduce a la ley de Bernouilli de los grandes números.
+
+\subsection{Ley débil de los grandes números}
+\subsection{Ley fuerte de los grandes números DE Kolmogorov}
+Sea ${X_n}$ una sucesión de variables aleatorias independientes e
+idénticamente distribuidas con una ley común $\mathcal{L}(X)$.
+Entonces:
+$$E|X|<\infty \Longleftrightarrow \dfrac{S_n}{n}=\dfrac{\sum_{k=1}^n
+X_k}{n}=\dfrac{X_1 \ldots X_n}{n}\stackrel{c.s}{\longrightarrow}EX$$
+
+\chapter{El problema central del límite}
+El problema del límite central en probabilidad es el problema de
+convergencia de leyes de secuencias de sumas de variables aleatorias.
+\section{Preeliminares}
+Consideramos $S_n$ el número de ocurrencias de un determinado evento
+con probabilidad $p$ en $n$ intentos idénticos e independientes. Para
+evitar trivialidades asumimos que $pq\neq 0$, donde $q=1-p$. Si $X_k$
+denota el indicador del evento en el $k$-ésimo intento, entonces
+$S_n=\displaystyle\sum_{k=1}^n X_k$ con $n=1,2,\ldots$ donde los
+sumandos son indicadores independientes e idénticamente distribuidos.
+Este es el caso de Bernouilli; como $EX_k=p$ y $EX_k^2=p$, entonces
+$\sigma^2 X_k=p-p^2=pq$ de donde se sigue que:
+$$ES_n=\sum_{k=1}^nEX_k=np \,\,\, , \,\,\, \sigma^2 S_n=\sum_{k=1}^n
+\sigma^2 X_k=npq$$
+EL primer teorema del límite central publicado en 1713 dice que
+$\dfrac{S_n}{n}\stackrel{\mathcal{P}}{\longrightarrow}p$
+\\\\
+Puliendo este resultado, de Moivre obtuvo el segundo teorema de
+límites, que en la forma integral dada por Laplace, dice que:
+$$P\left[ \frac{S_n -np}{\sqrt{npq}}< x \right]\rightarrow
+\frac{1}{\sqrt{2\pi}}\int_{-\infty}^{x}e^{-\frac{1}{2}y^2}dy\, ,\,\,\,
+-\infty\leq x\leq \infty$$
+\\\\
+El tercer teorema del límite central fue obtenido por Poisson, quien
+modificó el caso de Bernouilli asumiendo que la probabilidad $p=p_n$
+depende del número de intentos de tal manera que
+$np_n\rightarrow\lambda>0$. Por consiguiente, escribiendo ahora
+$X_{nk}$ y $S_{nn}$ en lugar de $X_k$ y $S_n$, el caso de Poisson
+corresponde a una serie de sumas $S_{nn}=\displaystyle\sum_{k=1}^n
+X_{nk}$ donde, para cada n, los sumandos $X_{nk}$ son indicadores
+independientes e idénticamente distribuidos con
+$P[X_{nk}=1]=\dfrac{\lambda}{n}+o \left( \dfrac{1}{n}\right)$
+
+
+
 ## Variables aleatorias
 
 ## Independencia
