--- a/bookdown/packages.bib
+++ b/bookdown/packages.bib
@@ -10,29 +10,72 @@
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2018},
-  note = {R package version 0.8},
+  note = {R package version 0.9},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 @Manual{R-DT,
   title = {DT: A Wrapper of the JavaScript Library 'DataTables'},
-  author = {Yihui Xie and Joe Cheng and Xianying Tan},
+  author = {Yihui Xie},
   year = {2018},
-  note = {R package version 0.5},
+  note = {R package version 0.4},
   url = {https://CRAN.R-project.org/package=DT},
+}
+@Manual{R-e1071,
+  title = {e1071: Misc Functions of the Department of Statistics, Probability
+Theory Group (Formerly: E1071), TU Wien},
+  author = {David Meyer and Evgenia Dimitriadou and Kurt Hornik and Andreas Weingessel and Friedrich Leisch},
+  year = {2018},
+  note = {R package version 1.7-0},
+  url = {https://CRAN.R-project.org/package=e1071},
+}
+@Manual{R-ggplot2,
+  title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo},
+  year = {2018},
+  note = {R package version 3.1.0},
+  url = {https://CRAN.R-project.org/package=ggplot2},
+}
+@Manual{R-gridExtra,
+  title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
+  author = {Baptiste Auguie},
+  year = {2017},
+  note = {R package version 2.3},
+  url = {https://CRAN.R-project.org/package=gridExtra},
 }
 @Manual{R-htmlwidgets,
   title = {htmlwidgets: HTML Widgets for R},
   author = {Ramnath Vaidyanathan and Yihui Xie and JJ Allaire and Joe Cheng and Kenton Russell},
   year = {2018},
-  note = {R package version 1.3},
+  note = {R package version 1.2},
   url = {https://CRAN.R-project.org/package=htmlwidgets},
 }
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2018},
-  note = {R package version 1.20},
+  note = {R package version 1.21},
   url = {https://CRAN.R-project.org/package=knitr},
+}
+@Manual{R-latex2exp,
+  title = {latex2exp: Use LaTeX Expressions in Plots},
+  author = {Stefano Meschiari},
+  year = {2015},
+  note = {R package version 0.4.0},
+  url = {https://CRAN.R-project.org/package=latex2exp},
+}
+@Manual{R-modeest,
+  title = {modeest: Mode Estimation},
+  author = {P. PONCET},
+  year = {2012},
+  note = {R package version 2.1},
+  url = {https://CRAN.R-project.org/package=modeest},
+}
+@Manual{R-moments,
+  title = {moments: Moments, cumulants, skewness, kurtosis and related tests},
+  author = {Lukasz Komsta and Frederick Novomestky},
+  year = {2015},
+  note = {R package version 0.14},
+  url = {https://CRAN.R-project.org/package=moments},
 }
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
@@ -44,7 +87,7 @@
 @Manual{R-webshot,
   title = {webshot: Take Screenshots of Web Pages},
   author = {Winston Chang},
-  year = {2018},
-  note = {R package version 0.5.1},
+  year = {2017},
+  note = {R package version 0.5.0},
   url = {https://CRAN.R-project.org/package=webshot},
 }
